[package]
name = "yummy-rs"
version = "0.0.4"
edition = "2021"

[lib]
name = "yummy_rs"
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
actix-web = "4"
redis = { version = "0.21.6", features = ["tokio-comp", "cluster", "r2d2"] }
pyo3 = { version = "0.16.5", features = ["extension-module"] }
#pyo3-asyncio = { version = "0.16", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
r2d2 = "0.8.10"
#r2d2_redis = "0.14.0"
byteorder = "1.4.3"
fasthash = "0.4.0"
protobuf = "=3.1.0"
protobuf-json-mapping = "=3.1.0"
async-trait = "0.1.57"
tokio = "1.20.0"
env_logger = "0.9.1"
#cached = "0.39.0"
chrono = "0.4.22"
derive_more = "0.99.17"
#log = "0.4.17"
#derivative = "2.2.0"
#prost = "0.10"
#bb8-redis = "0.11.0"
#bb8 = "0.8.0"
