[package]
name = "yummy-core"
version = "0.0.6"
#version.workspace = true
edition = "2021"
repository = "https://github.com/yummyml/yummy"
description = "Core of the yummy-rs library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
byteorder = "1.4.3"
fasthash = "0.4.0"
protobuf = "=3.1.0"
protobuf-json-mapping = "=3.1.0"
async-trait = "0.1.57"
tokio = "1.20.0"
