[package]
name = "yummy-delta"
version.workspace = true
edition = "2021"
repository = "https://github.com/yummyml/yummy"
description = "Delta lake yummy library"
license = "Apache-2.0"

[dependencies]
yummy-core = { path = "../yummy-core" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1.57"
env_logger = "0.10.1"
derive_more = "0.99.17"
#reqwest = "0.11.13"
deltalake = { version="0.9.0", features = ["arrow", "parquet", "datafusion", "azure"] }
#async-std = "1.12.0"
tokio = { version = "1.20.0", features = ["full"] }
arrow = { version = "28" }
chrono = "0.4.22"
datafusion = { version = "22" }
datafusion-expr = { version = "22" }
datafusion-common = { version = "22" }
thiserror = "1.0"
futures = "0.3.25"
itertools = "0.10.5"
log = "0.4.6"
async-stream = "0.3.3"
bytes = "1.3.0"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.91"
anyhow = "1.0.69"
url = "2.3"
prettytable-rs = "^0.10"
once_cell = "1.17.1"
# Datafusion
#datafusion = { version = "14" }
#datafusion-expr = { version = "14" }
#datafusion-common = { version = "14" }
#datafusion-proto = { version = "14" }
