[package]
name = "yummy-features"
version = "0.0.8"
#version.workspace = true
edition = "2021"
repository = "https://github.com/yummyml/yummy"
description = "Feature store server of the yummy-rs library"

[dependencies]
actix-web = "4"
redis = { version = "0.21.6", features = ["tokio-comp", "cluster", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
r2d2 = "0.8.10"
byteorder = "1.4.3"
fasthash = "0.4.0"
protobuf = "=3.1.0"
protobuf-json-mapping = "=3.1.0"
async-trait = "0.1.57"
tokio = "1.20.0"
env_logger = "0.9.1"
chrono = "0.4.22"
derive_more = "0.99.17"
thiserror = "1.0"
