[package]
name = "yummy-ml-py"
version.workspace = true
edition = "2021"
repository = "https://github.com/yummyml/yummy"
description = "MLflow serve of the yummy-rs library"
license = "Apache-2.0"

[lib]
name = "yummy_ml"
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
yummy-ml = { path = "../yummy-ml" }
tokio = "1.20.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }

