[package]
name = "yummy-mlflow"
version = "0.0.7"
#version.workspace = true
edition = "2021"
repository = "https://github.com/yummyml/yummy"
description = "MLflow serve of the yummy-rs library"

[lib]
name = "yummy_mlflow"
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1.57"
tokio = "1.20.0"
env_logger = "0.9.1"
chrono = "0.4.22"
derive_more = "0.99.17"
catboost = { git = "https://github.com/catboost/catboost" }
lightgbm = "0.2.3"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
#reqwest = "0.11.13"
