[package]
name = "yummy-mlflow"
version.workspace = true
edition = "2021"
repository = "https://github.com/yummyml/yummy"
description = "MLflow serve of the yummy-rs library"
license = "Apache-2.0"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1.57"
tokio = "1.20.0"
env_logger = "0.9.1"
chrono = "0.4.22"
derive_more = "0.99.17"
#catboost = { git = "https://github.com/catboost/catboost", optional = true }
lightgbm = "0.2.3"
thiserror = "1.0"
#reqwest = "0.11.13"

[features]
catboost = []
#catboost = ["dep:catboost"]
