[package]
name = "yummy"
version = "0.0.7"
edition = "2021"
repository = "https://github.com/yummyml/yummy"
description = "The yummy-rs library"

[[bin]]
name = "yummy"
path = "src/main.rs"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
clap = "4.2.1"
yummy-delta = "0.0.8"
tokio = "1.20.0"
