[package]
name = "yummy"
version = "0.0.8"
edition = "2021"
repository = "https://github.com/yummyml/yummy"
description = "The yummy library"
license = "Apache-2.0"

[[bin]]
name = "yummy"
path = "src/main.rs"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
clap = "4.2.1"
yummy-delta = { version = "0.0.8",  path = "../yummy-delta", optional = true }
tokio = { version = "1.20.0", features = ["full"] }

[features]
yummy-delta = ["dep:yummy-delta"]
